<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Tests.Controller.LoginActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginEmailTxt" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:hint="@string/email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPasswordTxt" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailTxt" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp" android:hint="@string/password"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginLoginBtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordTxt" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:background="@color/colorPrimary"
            android:textColor="@android:color/white" android:onClick="loginLoginBtnClicked"/>
    <TextView
            android:text="@string/don_t_have_an_account"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:id="@+id/textView" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/loginLoginBtn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintHorizontal_bias="0.5" android:textSize="18sp"/>
    <Button
            android:text="@string/sign_up_here"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginCreateUserBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textColor="@android:color/white"
            android:background="@color/colorPrimary" android:onClick="loginCreateUserBtnClicked"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginSpinner"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView"/>
</android.support.constraint.ConstraintLayout>